[gd_scene load_steps=10 format=2]

[ext_resource path="res://Immagini/Oggetti/FineLivello/SpriteFineLivello.png" type="Texture" id=1]
[ext_resource path="res://Scene/Oggetti/FineLivello.gd" type="Script" id=2]
[ext_resource path="res://Immagini/Personaggio/Man_walk (1).png" type="Texture" id=3]
[ext_resource path="res://Immagini/Personaggio/Man_Spalle.png" type="Texture" id=4]
[ext_resource path="res://Audio/Vittoria.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 90.75, 44.125 )

[sub_resource type="Animation" id=2]
resource_name = "FineLivello"
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath("Cestino:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.1, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ManWalk:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.6, 1.9, 2.4, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -84, -26 ), Vector2( -30, -26 ), Vector2( -30, -26 ), Vector2( 30, -26 ), Vector2( 30, -26 ), Vector2( 88, -26 ), Vector2( 88, -26 ), Vector2( 200, -26 ), Vector2( 300, -26 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ManWalk:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.6, 0.7, 0.8, 1.3, 1.4, 1.5, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 2,
"values": [ 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 3, 4, 5, 0, 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ManSpalle:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.301, 0.9, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 0, 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ManWalk:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3, 0.6, 0.9, 1.2, 1.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ManSpalle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ManSpalle:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.3, 0.6, 0.9, 1.2, 1.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -66, -4 ), Vector2( -66, -4 ), Vector2( -6, -4 ), Vector2( -6, -4 ), Vector2( 56, -4 ), Vector2( 56, -4 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Cestino:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ManWalk:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 44 )

[node name="FineLivello" type="Area2D"]
pause_mode = 2
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="Cestino" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FineLivello = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="ManSpalle" type="Sprite" parent="."]
visible = false
position = Vector2( 56, -4 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="ManWalk" type="Sprite" parent="."]
position = Vector2( 300, -26 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
hframes = 6

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -66, 6 )
scale = Vector2( 0.996772, 1 )
shape = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_FineLivello_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
